# cef

./: .gitignore  Cargo.toml  README.md  build.rs  expanded.rs
examples/: Cargo.toml  blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  build.rs  cefsimple.rs  embedded.rs  embedded_wgpu.rs  quick_blit.rs
examples/cefsimple/: main.rs
examples/embedded/: gullery.rs  main.rs  wgpu.rs  winit_blit.rs
examples/embedded-internal-message-pump/: main.rs  wgpu.rs
examples/embedded_gullery/: main.rs  quick_blit.rs
examples/embedded_wgpu/: main.rs
examples/win_resource/: MANIFEST1_1.txt  cef.rc
src/: accessibility_handler.rs  app.rs  browser.rs  browser_host.rs  browser_process_handler.rs  callback.rs  cef_helper_traits.rs  client.rs  color.rs  command_line.rs  cookie.rs  devtools_message_observer.rs  dom.rs  drag.rs  events.rs  extension.rs  extern_callback_helpers.rs  file_dialog.rs  frame.rs  framework_loader_macos.rs  helper_traits.rs  ids.rs  image.rs  ime.rs  key_event.rs  lib.rs  load_handler.rs  logging.rs  main_args.rs  media_router.rs  misc_fns.rs  multimap.rs  navigation.rs  print_handler.rs  printing.rs  process.rs  ptr_hash.rs  refcounted.rs  reference.rs  registration.rs  (+26 more)
src/client/: audio_handler.rs  context_menu_handler.rs  dialog_handler.rs  display_handler.rs  download_handler.rs  drag_handler.rs  find_handler.rs  focus_handler.rs  js_dialog_handler.rs  keyboard_handler.rs  life_span_handler.rs  render_handler.rs  request_handler.rs
src/client/context_menu_handler/: context_menu_params.rs  menu_model.rs  run_context_menu.rs
src/values/: iter.rs
