[package]
name = "cef"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>", "Osspial <osspial@gmail.com>"]
edition = "2018"

[dependencies]
cef-sys = { git = "https://github.com/anlumo/cef-sys.git" }
num_enum = "0.4"
parking_lot = "0.9"
downcast-rs = "1.1"
libc = "0.2"
bitflags = "1"
lazy_static = "1"
chashmap = "2"
chrono = "0.4"
raw-window-handle = "0.3"
uuid = "0.8"

[dev-dependencies]
winit = "=0.20.0-alpha4"
winit-blit = {git = "https://github.com/rust-windowing/winit-blit.git"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
