[package]
name = "cef"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>", "Osspial <osspial@gmail.com>"]
edition = "2018"

[dependencies]
cef-sys = { git = "https://github.com/dungeonfog/cef-sys.git", rev = "90e1ce93cb3c64208c5af1dbb786b9d2b475d1c2" }
parking_lot = "0.9"
downcast-rs = "1.1"
libc = "0.2"
bitflags = "1"
lazy_static = "1"
chashmap = "2"
chrono = "0.4"
raw-window-handle = "0.3"
uuid = "0.8"
log = "0.4"
dunce = "1.0"

[dev-dependencies]
winit = "=0.20.0-alpha4"
wgpu = "0.4"
vk-shader-macros = "0.2.2"
log = { version = "0.4", features = ["std"] }

[features]
sandbox = ["cef-sys/sandbox"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" }
winit-blit = {git = "https://github.com/rust-windowing/winit-blit.git"}

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[workspace]
members = ["./examples"]

[patch.crates-io]
winit = { git = "https://github.com/Osspial/winit.git", rev = "8cef81047dad52aaf327f8d8ef78539f72414fd1" }
