[package]
name = "cef-examples"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>", "Osspial <osspial@gmail.com>"]
edition = "2018"

[dependencies]
cef = {path = ".."}
cef-sys = { git = "https://github.com/dungeonfog/cef-sys.git" }
winit = { git = "https://github.com/Osspial/winit.git", rev = "8cef81047dad52aaf327f8d8ef78539f72414fd1" }
log = { version = "0.4", features = ["std"] }
parking_lot = "0.9"

wgpu = {version = "0.4", optional = true}
vk-shader-macros = {version = "0.2.2", optional = true}

glutin = {version = "0.24.0", optional = true}
gullery = {git = "https://github.com/Osspial/gullery.git", optional = true }
gullery_macros = {git = "https://github.com/Osspial/gullery.git", optional = true }

[build-dependencies]
embed-resource = "1"

[[bin]]
name = "cefsimple"
path = "cefsimple/main.rs"

[[bin]]
name = "embedded"
path = "embedded/main.rs"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
winit-blit = {git = "https://github.com/rust-windowing/winit-blit.git", optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2", features = ["xlib"]}

[features]
winit-blit-renderer = ["winit-blit"]
gullery-renderer = ["glutin", "gullery", "gullery_macros"]
wgpu-renderer = ["wgpu", "vk-shader-macros"]
